--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Msn Mistiri - Home Two</title>
+        <title>WEMSELENGINEERING SERVICE LTD</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -44,10 +44,12 @@
                             <div class="col-md-6">
                                 <div class="header-top-info">
                                     <div class="header-top-left">
-                                        <p>Call:</p> <a href="# ">+88 225 88 154 263</a>
+                                        <p>Call:</p> <a href="# ">+2348033424367</a>
+                                        <p>Call:</p> <a href="# ">+2349152606083</a>
+                                        <p>Call:</p> <a href="# ">+2348023758766</a>
                                     </div>
                                     <div class="header-top-right">
-                                        <p>Email:</p> <a href="# ">msnmistiri@email.com </a>
+                                        <p>Email:</p> <a href="mailto:wmslengineeringservice@gmail.com">wmslengineeringservice@gmail.com </a>
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +76,7 @@
                         <!-- Start Logo -->
                         <div class="col-md-3 col-sm-4 col-xs-8">
                             <div class="header-logo">
-                                <a href="#"><img src="img/logo/logo3.png" alt="" /></a>
+                                <a href="#"><img src="img/logo/logoqw.jpg" alt="" /></a>
                             </div>
                         </div>
                         <!-- End Logo -->
@@ -141,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-thumb="img/feature/1.jpg" data-src="img/feature/1.jpg">
+                <div data-thumb="img/feature/th (1).jpg" data-src="img/feature/th (1).jpg">
                     <div class="camera_caption">
                         <div class="container">
                             <div class="row">
@@ -683,10 +685,10 @@ amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p
                                 <h1>GET IN TOUCH</h1>
                             </div>
                             <div class="contact-address">
-                               <p><i class="fa fa-phone"></i><a href="#">+88 018 785 4589</a></p>
-                               <p><i class="fa fa-envelope" aria-hidden="true"></i><a href="#">msnmistiri@email.com</a></p>
-                               <p><i class="fa fa-globe" aria-hidden="true"></i><a href="#">www.msnmistiri.com</a></p>
-                               <p><i class="fa fa-map-marker" aria-hidden="true"></i>ur address goes here,street, Crossroad123.</p>
+                               <p><i class="fa fa-phone"></i><a href="#">+2348033424367</a></p>
+                               <p><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:wmslengineeringservice@gmail.com">wmslengineeringservice@gmail.com</a></p>
+                               <p><i class="fa fa-globe" aria-hidden="true"></i><a href="#">www.wemselenginerringserviceltd.com</a></p>
+                               <p><i class="fa fa-map-marker" aria-hidden="true"></i>No7, Fola Fashion Street,Sabo Abeokuta,Ogun State.</p>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-12">
@@ -718,8 +720,8 @@ amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p
                         <div class="copyright">
                             <p>
                                 Copyright ©
-                                <a href="https://devitems.com/">MSN MISTIRI </a>2016.
-                                All right reserved.Created by Devitems.
+                                <a href="index.html">WEMSELENGINEERING </a>2022.
+                                All right reserved.
                             </p>
                         </div>
                     </div>
