--- a/index.html
+++ b/index.html
@@ -745,6 +745,10 @@
                                 </div>
                             </form>
                             
+                            <a href="https://visitcount.itsvg.in">
+                                <img src="https://visitcount.itsvg.in/api?id=Emmy594&label=Profile%20Views&color=1&icon=0&pretty=true" />
+                              </a>
+                              
                         </div>
                     </div>
                 </div>
