--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="">
-
-<!-- Mirrored from try.htmldemo.net/msn-mistiri/msn-mistiri/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 29 Nov 2022 02:13:37 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -483,7 +480,8 @@
                     <div class="dream-text">
                         <h2>Lets Make Your</h2>
                         <h2 class="dream1">Dream House <span>With Our</span> Best Engineers</h2>
-                        <p>Giving you the best and quality house is always our satisfaction. We bring your project ideas to life.Slide in let's talk.</p>
+                        <p>Giving you the best and quality house is always our satisfaction. We bring your project ideas
+                            to life.Slide in let's talk.</p>
                         <div class="dream-text-down">
                             <a class="hs-btn" href="#about-us">Start Project</a>
                             <a class="hs-btn2" href="#about-us">Call Now</a>
@@ -568,7 +566,7 @@
                         <div class="about-text-top">
                             <div class="only">
                                 <h2>FEATURE WORK</h2>
-                                <h5>Our Feature Work</h5>
+                                <h5>Our Featured Work</h5>
                             </div>
                         </div>
                     </div>
@@ -744,11 +742,12 @@
                                     <input class="submit" type="submit" value="SEND">
                                 </div>
                             </form>
-                            
+
                             <a href="https://visitcount.itsvg.in">
-                                <img src="https://visitcount.itsvg.in/api?id=Emmy594&label=Profile%20Views&color=1&icon=0&pretty=true" />
-                              </a>
-                              
+                                <img
+                                    src="https://visitcount.itsvg.in/api?id=Emmy594&label=Profile%20Views&color=1&icon=0&pretty=true" />
+                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -861,7 +860,5 @@
 		============================================ -->
     <script src="js/main.js"></script>
 </body>
-
-<!-- Mirrored from try.htmldemo.net/msn-mistiri/msn-mistiri/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 29 Nov 2022 02:13:51 GMT -->
 
 </html>
