--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                     <a href="#"><img alt="" src="img/icon-img/1.png"></a>
                                 </div>
                                 <div class="service-text-left">
-                                    <h3>BUILDING CONSTRUCTION</h3>
+                                    <h3>BUILDING and ROAD CONSTRUCTION</h3>
                                     <p>At WEMSELENGINEERING SERVICES Ltd,Our Building Construction Services is Top notch
                                         to none. As a distinguished construction company that is well established in
                                         every area of building construction especially the design, installation and
@@ -276,7 +276,7 @@
                                     <a href="#"><img alt="" src="img/icon-img/3.png"></a>
                                 </div>
                                 <div class="service-text-left">
-                                    <h3>PROJECT MANAGEMENT:</h3>
+                                    <h3>PROJECT MANAGEMENT AND EXTERNAL WORKS:</h3>
                                     <p>At WEMSELENGINEERING SERVICES Ltd, we utilize effective project management
                                         techniques in our construction activities from the design, planning, execution
                                         and post-construction phases for the purpose of achieving project objectives,
@@ -562,7 +562,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <div class="feature-img-top">
-                        <a href="#"><img src="img/feature/1.jpg" alt=""></a>
+                        <a href="#"><img src="img/feature/W1.jpg" alt=""></a>
                         <div class="about-text-top">
                             <div class="only">
                                 <h2>FEATURE WORK</h2>
@@ -575,10 +575,10 @@
                             <div class="col-md-6 col-sm-6">
                                 <div class="feature-all">
                                     <div class="feature-img2">
-                                        <a href="#"><img src="img/feature/2.jpg" alt=""></a>
+                                        <a href="#"><img src="img/feature/W10.jpg" alt=""></a>
                                     </div>
                                     <div class="work">
-                                        <a class="la-icon venobox" href="img/feature/03.jpg" data-gall="myGallery">
+                                        <a class="la-icon venobox" href="img/feature/W11.jpg" data-gall="myGallery">
                                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                                         </a>
                                     </div>
@@ -587,10 +587,10 @@
                             <div class="col-md-6 col-sm-6">
                                 <div class="feature-all res3">
                                     <div class="feature-img2">
-                                        <a href="#"><img src="img/feature/3.jpg" alt=""></a>
+                                        <a href="#"><img src="img/feature/W12.jpg" alt=""></a>
                                     </div>
                                     <div class="work">
-                                        <a class="la-icon venobox" href="img/feature/05.jpg" data-gall="myGallery">
+                                        <a class="la-icon venobox" href="img/feature/W13.jpg" data-gall="myGallery">
                                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                                         </a>
                                     </div>
@@ -607,10 +607,10 @@
                                     <div class="col-md-6 col-sm-6">
                                         <div class="feature-all">
                                             <div class="feature-img2">
-                                                <a href="#"><img src="img/feature/4.jpg" alt=""></a>
+                                                <a href="#"><img src="img/feature/W14.jpg" alt=""></a>
                                             </div>
                                             <div class="work">
-                                                <a class="la-icon venobox" href="img/feature/01.jpg"
+                                                <a class="la-icon venobox" href="img/feature/W15.jpg"
                                                     data-gall="myGallery">
                                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                                 </a>
@@ -620,10 +620,10 @@
                                     <div class="col-md-6 col-sm-6">
                                         <div class="feature-all res3">
                                             <div class="feature-img2">
-                                                <a href="#"><img src="img/feature/5.jpg" alt=""></a>
+                                                <a href="#"><img src="img/feature/W3.jpg" alt=""></a>
                                             </div>
                                             <div class="work">
-                                                <a class="la-icon venobox" href="img/feature/04.jpg"
+                                                <a class="la-icon venobox" href="img/feature/W4.jpg"
                                                     data-gall="myGallery">
                                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                                 </a>
@@ -637,10 +637,10 @@
                                     <div class="col-md-6 col-sm-6">
                                         <div class="feature-all">
                                             <div class="feature-img2">
-                                                <a href="#"><img src="img/feature/6.jpg" alt=""></a>
+                                                <a href="#"><img src="img/feature/W5.jpg" alt=""></a>
                                             </div>
                                             <div class="work">
-                                                <a class="la-icon venobox" href="img/feature/02.jpg"
+                                                <a class="la-icon venobox" href="img/feature/W6.jpg"
                                                     data-gall="myGallery">
                                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                                 </a>
@@ -650,10 +650,143 @@
                                     <div class="col-md-6 col-sm-6">
                                         <div class="feature-all res3">
                                             <div class="feature-img2">
-                                                <a href="#"><img src="img/feature/7.jpg" alt=""></a>
+                                                <a href="#"><img src="img/feature/W7.jpg" alt=""></a>
                                             </div>
                                             <div class="work">
-                                                <a class="la-icon venobox" href="img/feature/06.jpg"
+                                                <a class="la-icon venobox" href="img/feature/W8.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="feature-right">
+                        <div class="feature-bottom">
+                            <div class="row">
+                                <div class="feature-img-left an-fe">
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W9.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W10.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all res3">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W3.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W10.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="feature-img-left">
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W10.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W1.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all res3">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W9.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W14.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-right">
+                        <div class="feature-bottom">
+                            <div class="row">
+                                <div class="feature-img-left an-fe">
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W11.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W3.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all res3">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W5.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W8.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="feature-img-left">
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W9.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W10.jpg"
+                                                    data-gall="myGallery">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6">
+                                        <div class="feature-all res3">
+                                            <div class="feature-img2">
+                                                <a href="#"><img src="img/feature/W11.jpg" alt=""></a>
+                                            </div>
+                                            <div class="work">
+                                                <a class="la-icon venobox" href="img/feature/W15.jpg"
                                                     data-gall="myGallery">
                                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                                 </a>
