--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -48,9 +49,8 @@
                                     <p>Call:</p> <a href="# ">+2348023758766</a>
                                 </div>
                                 <div class="header-top-right">
-                                    <p>Email:</p> <a
-                                        href="mailto:wmslengineeringservicelimited@gmail.com">wmslengineeringservicelimited@gmail.com
-                                    </a>
+                                    <p>Email:</p>
+                                     <a href="mailto:wemselengineringservicelimited@yahoo.com">wemselengineringservicelimited@yahoo.com</a>
                                 </div>
                             </div>
                         </div>
@@ -255,9 +255,7 @@
                                 <div class="service-text-left">
                                     <h3>BUILDING and ROAD CONSTRUCTION</h3>
                                     <p>At WEMSELENGINEERING SERVICES Ltd,Our Building Construction Services is Top notch
-                                        to none. As a distinguished construction company that is well established in
-                                        every area of building construction especially the design, installation and
-                                        management of building services</p>
+                                        to none.</p>
                                 </div>
                             </div>
                             <div class="all-service-text">
@@ -267,8 +265,7 @@
                                 <div class="service-text-left">
                                     <h3>CIVIL ENGINEERING AND INFRASTRUCTURES SERVICES:</h3>
                                     <p>Civil Engineering services and Infrastructure systems involves the design,
-                                        analysis, and management of infrastructure supporting human activities of
-                                        buildings that make up urban and rural communities.</p>
+                                        analysis, and management of infrastructure in urban and rural communities.</p>
                                 </div>
                             </div>
                             <div class="all-service-text btm-zero">
@@ -278,9 +275,7 @@
                                 <div class="service-text-left">
                                     <h3>PROJECT MANAGEMENT AND EXTERNAL WORKS:</h3>
                                     <p>At WEMSELENGINEERING SERVICES Ltd, we utilize effective project management
-                                        techniques in our construction activities from the design, planning, execution
-                                        and post-construction phases for the purpose of achieving project objectives,
-                                        including the management of quality, cost, and time.</p>
+                                        techniques in our construction activities.</p>
                                 </div>
                             </div>
                         </div>
@@ -331,7 +326,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="counter-next">
-                        <h2> Developer Hand</h2>
+                        <h2> Builder Hand</h2>
                     </div>
                     <div class="counter">
                         1254
@@ -365,7 +360,7 @@
                                         <div class="choose-bottom">
                                             <ul>
                                                 <li><img src="img/icon-img/4.png" alt="">Satisfacton Guarantee.</li>
-                                                <li><img src="img/icon-img/5.png" alt="">Creative Walll Painting.</li>
+                                                <li><img src="img/icon-img/5.png" alt="">Civil engineering.</li>
                                                 <li><img src="img/icon-img/6.png" alt="">Great Staff.</li>
                                             </ul>
                                         </div>
@@ -401,10 +396,9 @@
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="team-bottom team res">
                         <a href="#"><img alt="" src="img/team/1.png"></a>
-                        <h3>Timothy Reid</h3>
-                        <h5>Project Manager</h5>
-                        <p>Minim veniam, quis nostrud erci
-                            amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p>
+                        <h3>Bankole Akeem</h3>
+                        <h5>ACCOUNT OFFICER</h5>
+                        <p></p>
                         <div class="team-social-icon">
                             <ul>
                                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -419,10 +413,9 @@
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="team-bottom team res">
                         <a href="#"><img alt="" src="img/team/2.png"></a>
-                        <h3>MS Nawas</h3>
-                        <h5>Project Manager</h5>
-                        <p>Minim veniam, quis nostrud erci
-                            amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p>
+                        <h3>Bankole A.A </h3>
+                        <h5>LAWYER</h5>
+                        <p> </p>
                         <div class="team-social-icon">
                             <ul>
                                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -437,10 +430,9 @@
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="team-bottom res">
                         <a href="#"><img alt="" src="img/team/1.png"></a>
-                        <h3>Robiul Siddike</h3>
-                        <h5>Project Manager</h5>
-                        <p>Minim veniam, quis nostrud erci
-                            amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p>
+                        <h3>Omotan Adebowale R.</h3>
+                        <h5>C.E.O</h5>
+                        <p></p>
                         <div class="team-social-icon">
                             <ul>
                                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -455,10 +447,9 @@
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="team-bottom">
                         <a href="#"><img alt="" src="img/team/2.png"></a>
-                        <h3>Maksud Reza</h3>
-                        <h5>Project Manager</h5>
-                        <p>Minim veniam, quis nostrud erci
-                            amr ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure </p>
+                        <h3>Ahmed Jaji</h3>
+                        <h5>PROCUREMENT OFFICER</h5>
+                        <p></p>
                         <div class="team-social-icon">
                             <ul>
                                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -854,10 +845,12 @@
                         <div class="contact-address">
                             <p><i class="fa fa-phone"></i><a href="#">+2348033424367</a></p>
                             <p><i class="fa fa-envelope" aria-hidden="true"></i><a
-                                    href="mailto:wmslengineeringservicelimited@gmail.com">wmslengineeringservicelimited@gmail.com</a>
+                                    href="mailto:wemselengineringservicelimited@yahoo.com">wemselengineringservicelimited@yahoo.com</a>
                             </p>
-                            <p><i class="fa fa-globe" aria-hidden="true"></i><a
-                                    href="#">www.wemselenginerringserviceltd.com</a></p>
+                            <p><i class="fa fa-globe" aria-hidden="true"></i>
+                                <a
+                                    href="https://www.wemselengineeringserviceltd.com/">www.wemselengineeringserviceltd.com</a>
+                            </p>
                             <p><i class="fa fa-map-marker" aria-hidden="true"></i>No7, Fola Fashion Street,Sabo
                                 Abeokuta,Ogun State.</p>
                         </div>
@@ -908,18 +901,6 @@
     <div id="toTop" style="display: block;">
         <i class="fa fa-chevron-up"></i>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
