--- a/index.html
+++ b/index.html
@@ -213,28 +213,28 @@
                     <div class="creative-text res">
                         <a href="#"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></a>
                         <h3>CREATIVE IDEAS</h3>
-                        <p> </p>
+                        <p>Our ideas are top notch. </p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="creative-text res">
                         <a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i></a>
                         <h3>PLANNING</h3>
-                        <p> </p>
+                        <p>We plan,then proceed to work.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="creative-text res2">
                         <a href="#"><i class="fa fa-cog" aria-hidden="true"></i></a>
                         <h3>SAFE WORK</h3>
-                        <p></p>
+                        <p>Our works are 100% safe. </p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
                     <div class="creative-text">
                         <a href="#"><i class="fa fa-trophy" aria-hidden="true"></i></a>
                         <h3>BEST QUALITY</h3>
-                        <p> </p>
+                        <p>We provide the best and quality work.</p>
                     </div>
                 </div>
             </div>
