--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                                 </div>
                                 <div class="header-top-right">
                                     <p>Email:</p>
-                                     <a href="mailto:wemselengineringservicelimited@yahoo.com">wemselengineringservicelimited@yahoo.com</a>
+                                    <a
+                                        href="mailto:wemselengineringservicelimited@yahoo.com">wemselengineringservicelimited@yahoo.com</a>
                                 </div>
                             </div>
                         </div>
@@ -288,7 +289,6 @@
                             <div class="only2">
                                 <h2>OUR SERVICES</h2>
                                 <h5>We Develop Buildings</h5>
-                                <h1>tryuwiown</h1>
                             </div>
                         </div>
                     </div>
