--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <!-- Start Logo -->
                     <div class="col-md-3 col-sm-4 col-xs-8">
                         <div class="header-logo">
-                            <a href="#"><img src="img/logo/logoqw.jpg" alt="" /></a>
+                            <a href="#"><img src="img/logo/wemsel logo.png" alt="" /></a>
                         </div>
                     </div>
                     <!-- End Logo -->
@@ -306,7 +306,7 @@
                         <h2> Completed Project</h2>
                     </div>
                     <div class="counter res">
-                        5608
+                        608
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
@@ -314,7 +314,7 @@
                         <h2> Cup Coffee</h2>
                     </div>
                     <div class="counter res">
-                        4015
+                        205
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
@@ -322,7 +322,7 @@
                         <h2> Happy Client</h2>
                     </div>
                     <div class="counter res2">
-                        540
+                        840
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 text-center">
@@ -822,7 +822,7 @@
                         <div class="contact-left">
                             <div class="contact-img">
                                 <a href="#">
-                                    <img alt="" src="img/logo/logoqw.jpg">
+                                    <img alt="" src="img/logo/wemsel logo.png">
                                 </a>
                             </div>
                             <div class="contact-text">
