--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                     ></a>
                   </li>
                 </ul>
-                <h1 style="color: black;">Ahmed Jaji</h1>
+                <h1 style="color: black;">Ahmed Jaj</h1>
              <b><h4  style="color: black;">PROCUREMENT OFFICER</h4></b> 
               </div>
             </div>
