--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
             <div class="copyright">
               <p>
                 Copyright ©
-                <a href="index.html">WEMSELENGINEERING </a>2022. All right
+                <a href="index.html">WEMSELENGINEERING </a>2022-2024. All right
                 reserved.
               </p>
             </div>
