--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 text-center">
             <div class="team-bottom team res">
-              <a href="#"><img alt=""  src="img/team/" /></a>
+              <a href="#"><img alt="" src="img/team/" /></a>
               <h3>Bankole Akeem</h3>
               <h5>ACCOUNT OFFICER</h5>
               <p></p>
@@ -497,8 +497,8 @@
                     ></a>
                   </li>
                 </ul>
-                <h1  style="color: black;">Bankole Akeem</h1>
-                <h1  style="color: black;">ACCOUNT OFFICER</h1>
+                <h1 style="color: black">Bankole Akeem</h1>
+                <h1 style="color: black">ACCOUNT OFFICER</h1>
               </div>
             </div>
           </div>
@@ -531,8 +531,8 @@
                     ></a>
                   </li>
                 </ul>
-                <h1  style="color: black;">Bankole A.A </h1>
-              <b><h1 style="color: black;">LAWYER</h1></b>
+                <h1 style="color: black">Bankole A.A </h1>
+                <b><h1 style="color: black">LAWYER</h1></b>
               </div>
             </div>
           </div>
@@ -565,8 +565,8 @@
                     ></a>
                   </li>
                 </ul>
-                <h3 style="color: black;">Omotan Adebowale R.</h3>
-             <b><h1 style="color: black;">C.E.O</h1></b> 
+                <h3 style="color: black">Omotan Adebowale R.</h3>
+                <b><h1 style="color: black">C.E.O</h1></b>
               </div>
             </div>
           </div>
@@ -599,8 +599,8 @@
                     ></a>
                   </li>
                 </ul>
-                <h1 style="color: black;">Ahmed Jaji</h1>
-             <b><h4  style="color: black;">PROCUREMENT OFFICER</h4></b> 
+                <h1 style="color: black">Ahmed Jaji</h1>
+                <b><h4 style="color: black">PROCUREMENT OFFICER</h4></b>
               </div>
             </div>
           </div>
